objects/Case.object
<CustomObject>
    <fields>
        <fullName>Assigned_for_Digitization__c</fullName>
        <label># Assigned for Digitization (After FT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_for_Full_Text_Screening__c</fullName>
        <label># Assigned for Full Text Screening</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Work_Type__c</fullName>
        <label>Case Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>New Project</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>PICO Modification(s)</fullName>
                </value>
                <value>
                    <fullName>Additional Data Extraction</fullName>
                </value>
                <value>
                    <fullName>Additional Deliverable(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Accepted_Date__c</fullName>
        <label>Client Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Deliverable__c</fullName>
        <label>Client Deliverable</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evidence Table</fullName>
                </value>
                <value>
                    <fullName>Powerpoint File (interim/final deliverable)</fullName>
                </value>
                <value>
                    <fullName>Typed Report (interim/final deliverable)</fullName>
                </value>
                <value>
                    <fullName>Analysis File</fullName>
                </value>
                <value>
                    <fullName>Publication (incl. abstract, poster, manuscript, draft/final)</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Any Powerpoint Presentations</fullName>
                    <isActive>false</isActive>
                    <label>Any Powerpoint Presentations</label>
                </value>
                <value>
                    <fullName>Any Spreadsheet</fullName>
                    <isActive>false</isActive>
                    <label>Any Spreadsheet</label>
                </value>
                <value>
                    <fullName>Comparative Safety Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Comparative Safety Assessment</label>
                </value>
                <value>
                    <fullName>Feasibility Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Feasibility Assessment</label>
                </value>
                <value>
                    <fullName>HTA Proactive Response Dossier</fullName>
                    <isActive>false</isActive>
                    <label>HTA Proactive Response Dossier</label>
                </value>
                <value>
                    <fullName>Interim and Final Reports</fullName>
                    <isActive>false</isActive>
                    <label>Interim and Final Reports</label>
                </value>
                <value>
                    <fullName>Landscape Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Landscape Assessment</label>
                </value>
                <value>
                    <fullName>Literature Summary Report</fullName>
                    <isActive>false</isActive>
                    <label>Literature Summary Report</label>
                </value>
                <value>
                    <fullName>Manuscript for External Publication</fullName>
                    <isActive>false</isActive>
                    <label>Manuscript for External Publication</label>
                </value>
                <value>
                    <fullName>Medical Response Letter</fullName>
                    <isActive>false</isActive>
                    <label>Medical Response Letter</label>
                </value>
                <value>
                    <fullName>Meta-Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Meta-Analysis</label>
                </value>
                <value>
                    <fullName>Real World Clinical Comparative Assessments</fullName>
                    <isActive>false</isActive>
                    <label>Real World Clinical Comparative Assessments</label>
                </value>
                <value>
                    <fullName>Report on Analytics</fullName>
                    <isActive>false</isActive>
                    <label>Report on Analytics</label>
                </value>
                <value>
                    <fullName>Response to Regulatory Agencies</fullName>
                    <isActive>false</isActive>
                    <label>Response to Regulatory Agencies</label>
                </value>
                <value>
                    <fullName>Systematic Literature Report</fullName>
                    <isActive>false</isActive>
                    <label>Systematic Literature Report</label>
                </value>
                <value>
                    <fullName>Value Dossier</fullName>
                    <isActive>false</isActive>
                    <label>Value Dossier</label>
                </value>
                <value>
                    <fullName>White Papers</fullName>
                    <isActive>false</isActive>
                    <label>White Papers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Delivered_Date__c</fullName>
        <label>Client Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Department__c</fullName>
        <label>Client Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>China Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Cross-Functional</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Epidemiology</fullName>
                </value>
                <value>
                    <fullName>ERC</fullName>
                </value>
                <value>
                    <fullName>Global HEOR</fullName>
                </value>
                <value>
                    <fullName>Global HEVA</fullName>
                </value>
                <value>
                    <fullName>Global Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Global Medical Information</fullName>
                </value>
                <value>
                    <fullName>Global Patient Solutions</fullName>
                </value>
                <value>
                    <fullName>Global Pharmacovigilance</fullName>
                </value>
                <value>
                    <fullName>Global Real-World Evidence</fullName>
                </value>
                <value>
                    <fullName>Global Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Global Safety</fullName>
                </value>
                <value>
                    <fullName>Global Scientific Communications &amp; Publications</fullName>
                </value>
                <value>
                    <fullName>HSC</fullName>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>SciCom</fullName>
                </value>
                <value>
                    <fullName>South Africa Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>UK Scientific Communications and Publications</fullName>
                </value>
                <value>
                    <fullName>US HEOR</fullName>
                </value>
                <value>
                    <fullName>US HEVA</fullName>
                </value>
                <value>
                    <fullName>US Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>HEOR - Global</fullName>
                    <isActive>false</isActive>
                    <label>HEOR - Global</label>
                </value>
                <value>
                    <fullName>HEOR - US</fullName>
                    <isActive>false</isActive>
                    <label>HEOR - US</label>
                </value>
                <value>
                    <fullName>Med Affairs - Global</fullName>
                    <isActive>false</isActive>
                    <label>Med Affairs - Global</label>
                </value>
                <value>
                    <fullName>Med Affairs - US</fullName>
                    <isActive>false</isActive>
                    <label>Med Affairs - US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Kick_Off_Meeting_Scheduled__c</fullName>
        <label>Client Kick Off Meeting Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Kick_Off_Meeting__c</fullName>
        <label>Client Kick Off Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Services_Rep__c</fullName>
        <label>Client Services Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Augusta Crumrine</fullName>
                </value>
                <value>
                    <fullName>Ben Taylor</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>Jean-Francois Bitsch</fullName>
                </value>
                <value>
                    <fullName>Max Goldstein</fullName>
                </value>
                <value>
                    <fullName>Michael del Aguila</fullName>
                </value>
                <value>
                    <fullName>Toby Sayre</fullName>
                </value>
                <value>
                    <fullName>Arielle Levy</fullName>
                    <isActive>false</isActive>
                    <label>Arielle Levy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison__c</fullName>
        <label>Comparison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Project_Plan__c</fullName>
        <label>Complete Project Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_of_Topic__c</fullName>
        <label>Complexity of Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Simple or Standard</fullName>
                    <isActive>false</isActive>
                    <label>Simple or Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conduct_Analytics_Complete__c</fullName>
        <label>Conduct Analytics - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conduct_Analytics_Start__c</fullName>
        <label>Conduct Analytics - Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Services_Rep_1__c</fullName>
        <label>Consulting Services Rep #1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandra Ellis</fullName>
                </value>
                <value>
                    <fullName>Christopher Halladay</fullName>
                </value>
                <value>
                    <fullName>Craig Whittington</fullName>
                </value>
                <value>
                    <fullName>Daniel Conn</fullName>
                </value>
                <value>
                    <fullName>Ed Mills</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>Gaye Siliman</fullName>
                </value>
                <value>
                    <fullName>Jane Pan</fullName>
                </value>
                <value>
                    <fullName>Kenny Shum</fullName>
                </value>
                <value>
                    <fullName>Kristian Thorlund</fullName>
                </value>
                <value>
                    <fullName>Lionel Duarte</fullName>
                </value>
                <value>
                    <fullName>Priscilla Yen</fullName>
                </value>
                <value>
                    <fullName>Roshan Shah</fullName>
                </value>
                <value>
                    <fullName>Steve Lee</fullName>
                </value>
                <value>
                    <fullName>Tuan Dinh</fullName>
                </value>
                <value>
                    <fullName>Jacob Franek</fullName>
                    <isActive>false</isActive>
                    <label>Jacob Franek</label>
                </value>
                <value>
                    <fullName>Michael del Aguila</fullName>
                    <isActive>false</isActive>
                    <label>Michael del Aguila</label>
                </value>
                <value>
                    <fullName>Nilay Patel</fullName>
                    <isActive>false</isActive>
                    <label>Nilay Patel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting_Services_Rep_2__c</fullName>
        <label>Consulting Services Rep #2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandra Ellis</fullName>
                </value>
                <value>
                    <fullName>Christopher Halladay</fullName>
                </value>
                <value>
                    <fullName>Craig Whittington</fullName>
                </value>
                <value>
                    <fullName>Daniel Conn</fullName>
                </value>
                <value>
                    <fullName>Ed Mills</fullName>
                </value>
                <value>
                    <fullName>Fasahath Husain</fullName>
                </value>
                <value>
                    <fullName>Gaye Siliman</fullName>
                </value>
                <value>
                    <fullName>Jane Pan</fullName>
                </value>
                <value>
                    <fullName>Kenny Shum</fullName>
                </value>
                <value>
                    <fullName>Kristian Thorlund</fullName>
                </value>
                <value>
                    <fullName>Lionel Duarte</fullName>
                </value>
                <value>
                    <fullName>Priscilla Yen</fullName>
                </value>
                <value>
                    <fullName>Roshan Shah</fullName>
                </value>
                <value>
                    <fullName>Steve Lee</fullName>
                </value>
                <value>
                    <fullName>Tuan Dinh</fullName>
                </value>
                <value>
                    <fullName>Jacob Franek</fullName>
                    <isActive>false</isActive>
                    <label>Jacob Franek</label>
                </value>
                <value>
                    <fullName>Michael del Aguila</fullName>
                    <isActive>false</isActive>
                    <label>Michael del Aguila</label>
                </value>
                <value>
                    <fullName>Nilay Patel</fullName>
                    <isActive>false</isActive>
                    <label>Nilay Patel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <formula>Opportunity_Name__r.Contract_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Service__c</fullName>
        <label>Contracted Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Label Review</fullName>
                </value>
                <value>
                    <fullName>Documents &amp; Publications</fullName>
                </value>
                <value>
                    <fullName>Economic Assessment</fullName>
                </value>
                <value>
                    <fullName>Meta-Analysis or Network Meta-Analysis</fullName>
                </value>
                <value>
                    <fullName>Other-analysis or statistical work</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>SLR of Clinical Trials</fullName>
                    <label>Systematic Literature Review of Clinical Trials and Real World Evidence</label>
                </value>
                <value>
                    <fullName>Focused Literature Reviews</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Clinical Program Analytics</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Program Analytics</label>
                </value>
                <value>
                    <fullName>Evidence Synthesis</fullName>
                    <isActive>false</isActive>
                    <label>Evidence Synthesis</label>
                </value>
                <value>
                    <fullName>Medical Writing and Communications</fullName>
                    <isActive>false</isActive>
                    <label>Medical Writing and Communications</label>
                </value>
                <value>
                    <fullName>Rapid Appraisal</fullName>
                    <isActive>false</isActive>
                    <label>Rapid Appraisal</label>
                </value>
                <value>
                    <fullName>Real World Evidence Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Real World Evidence Assessment</label>
                </value>
                <value>
                    <fullName>Safety Assessment</fullName>
                    <isActive>false</isActive>
                    <label>Safety Assessment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Issue_Description__c</fullName>
        <description>Brief description of why there is an issue.</description>
        <label>Critical Issue Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked and a description of the issue is provided automatically sends email to Todd, Hae, Mika, Michael, Toby.</description>
        <label>Critical Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied - Project Closed</fullName>
                </value>
                <value>
                    <fullName>Satisfied - New Follow-On Work</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied - Revisions Required</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied - Project Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DI_II_Complete_Date__c</fullName>
        <label>DI-II Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Mass_Analysis_Complete_Date__c</fullName>
        <label>DI-II Mass Analysis Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_II_Start_Date__c</fullName>
        <label>DI-II Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Complete_Date__c</fullName>
        <label>DI-I Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_I_Start_Date__c</fullName>
        <label>DI-I Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOC_Data_Dataset_Name__c</fullName>
        <label>DOC Data Dataset Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Configuration_Start_Date__c</fullName>
        <label>Data Configuration Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Studies_Unique_to_Contract__c</fullName>
        <label># of Data Studies Unique to Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Database_Deadline__c</fullName>
        <label>Database Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Database_Name__c</fullName>
        <label>Database Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverable_Deadline_Date__c</fullName>
        <label>Deliverable Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_to_CS_Date__c</fullName>
        <label>Delivered to CS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Powerpoint_Report_Complete__c</fullName>
        <label>Develop Powerpoint Report - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Powerpoint_Report_Start__c</fullName>
        <label>Develop Powerpoint Report - Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Publication_Complete__c</fullName>
        <label>Develop Publication - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Publication_Start__c</fullName>
        <label>Develop Publication - Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Publication__c</fullName>
        <label>Develop Publication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Manuscript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Develop_Written_Report_Complete__c</fullName>
        <label>Develop Written Report - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Written_Report_Start__c</fullName>
        <label>Develop Written Report - Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digitized__c</fullName>
        <label># Digitized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disease_Indication__c</fullName>
        <label>Disease Indication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Volume_of_Data_Configuration__c</fullName>
        <label>Estimated Volume of Data Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>1 - Low (&lt;15 studies)</fullName>
                    <isActive>false</isActive>
                    <label>1 - Low (&lt;15 studies)</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <isActive>false</isActive>
                    <label>15</label>
                </value>
                <value>
                    <fullName>2 - Medium (16-50 studies)</fullName>
                    <isActive>false</isActive>
                    <label>2 - Medium (16-50 studies)</label>
                </value>
                <value>
                    <fullName>3 - High (51-100 studies)</fullName>
                    <isActive>false</isActive>
                    <label>3 - High (51-100 studies)</label>
                </value>
                <value>
                    <fullName>4 - Very High (&gt;100 studies)</fullName>
                    <isActive>false</isActive>
                    <label>4 - Very High (&gt;100 studies)</label>
                </value>
                <value>
                    <fullName>Needs Assessing</fullName>
                    <isActive>false</isActive>
                    <label>Needs Assessing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Volume_of_Literature__c</fullName>
        <label>Estimated Volume of Literature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1,000</fullName>
                </value>
                <value>
                    <fullName>1,001-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>&gt;5,000</fullName>
                </value>
                <value>
                    <fullName>High (&gt;6,000)</fullName>
                    <isActive>false</isActive>
                    <label>High (&gt;6,000)</label>
                </value>
                <value>
                    <fullName>Low (&lt;3,000)</fullName>
                    <isActive>false</isActive>
                    <label>Low (&lt;3,000)</label>
                </value>
                <value>
                    <fullName>Medium (3,001-6,000)</fullName>
                    <isActive>false</isActive>
                    <label>Medium (3,001-6,000)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Contractor_Deliverable_Deadline__c</fullName>
        <label>External Contractor Deliverable Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Contractor_Deliverable__c</fullName>
        <label>External Contractor Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evidence Table</fullName>
                </value>
                <value>
                    <fullName>Powerpoint File (interim/final deliverable)</fullName>
                </value>
                <value>
                    <fullName>Typed Report (interim/final deliverable)</fullName>
                </value>
                <value>
                    <fullName>Analysis File</fullName>
                </value>
                <value>
                    <fullName>Publication (incl. abstract, poster, manuscript, draft/final)</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Contractor_Delivered_Date__c</fullName>
        <label>External Contractor Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Contractor_Detail__c</fullName>
        <label>External Contractor Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Contractor_Name__c</fullName>
        <label>External Contractor Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Ellis</fullName>
                </value>
                <value>
                    <fullName>BMJ</fullName>
                </value>
                <value>
                    <fullName>Chris Halladay</fullName>
                </value>
                <value>
                    <fullName>Dinh Consulting Group</fullName>
                </value>
                <value>
                    <fullName>Ioannina University</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Outcomes (Paul Arora)</fullName>
                </value>
                <value>
                    <fullName>Maryam Noparast</fullName>
                </value>
                <value>
                    <fullName>Masoud Porrahmat</fullName>
                </value>
                <value>
                    <fullName>Medlior (Tara Cowling)</fullName>
                </value>
                <value>
                    <fullName>Mtek Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Contractor_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Contractor Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Contractor_Task__c</fullName>
        <label>External Contractor Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_Complete_Date__c</fullName>
        <label>Extraction Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extraction_Start_Date__c</fullName>
        <label>Extraction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FQ_ID__c</fullName>
        <label>FQ ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FQ_Name__c</fullName>
        <label>FQ Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_Library_Deadline__c</fullName>
        <label>FT Library Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Text_Review_Completed_Date__c</fullName>
        <label>Full Text Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Text_Review_Start_Date__c</fullName>
        <label>Full Text Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Governance_Category__c</fullName>
        <label>Governance Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bibliographic</fullName>
                </value>
                <value>
                    <fullName>Internal Strategy (Research)</fullName>
                </value>
                <value>
                    <fullName>Potential Publication (Research)</fullName>
                </value>
                <value>
                    <fullName>Rapid Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>